modified landing page and added nav bars

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -275,6 +275,10 @@ body {
   margin-bottom: 50px;
 }
 
+#third-section {
+  margin-bottom: 50px;
+}
+
 .testimonial {
   margin: 50px auto;
   background: #42444F;
