--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -730,3 +730,110 @@ a:hover {
 .devices {
   margin-top: 50px;
 }
+
+/*************** Pricing Charts (Landing Page) **************/
+.panel.price,
+.panel.price>.panel-heading{
+  border-radius:0px;
+  -moz-transition: all .3s ease;
+  -o-transition:  all .3s ease;
+  -webkit-transition:  all .3s ease;
+}
+.panel.price:hover{
+  box-shadow: 0px 0px 30px rgba(0,0,0, .2);
+}
+.panel.price:hover>.panel-heading{
+  box-shadow: 0px 0px 30px rgba(0,0,0, .2) inset;
+}
+
+
+.panel.price>.panel-heading{
+  box-shadow: 0px 5px 0px rgba(50,50,50, .2) inset;
+  text-shadow:0px 3px 0px rgba(50,50,50, .6);
+}
+
+.price .list-group-item{
+  border-bottom-:1px solid rgba(250,250,250, .5);
+}
+
+.panel.price .list-group-item:last-child {
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.panel.price .list-group-item:first-child {
+  border-top-right-radius: 0px;
+  border-top-left-radius: 0px;
+}
+
+.price .panel-footer {
+  color: #fff;
+  border-bottom:0px;
+  background-color:  rgba(0,0,0, .1);
+  box-shadow: 0px 3px 0px rgba(0,0,0, .3);
+}
+
+
+.panel.price .btn{
+  box-shadow: 0 -1px 0px rgba(50,50,50, .2) inset;
+  border:0px;
+}
+
+.price.panel-green>.panel-heading {
+  color: #fff;
+  background-color: #57AC57;
+  border-color: #71DF71;
+  border-bottom: 1px solid #71DF71;
+}
+
+
+.price.panel-green>.panel-body {
+  color: #fff;
+  background-color: #65C965;
+}
+
+
+.price.panel-green>.panel-body .lead{
+  text-shadow: 0px 3px 0px rgba(50,50,50, .3);
+}
+
+.price.panel-green .list-group-item {
+  color: #333;
+  background-color: rgba(50,50,50, .01);
+  font-weight:600;
+  text-shadow: 0px 1px 0px rgba(250,250,250, .75);
+}
+
+.price.panel-red>.panel-heading {
+  color: #fff;
+  background-color: #D04E50;
+  border-color: #FF6062;
+  border-bottom: 1px solid #FF6062;
+}
+
+
+.price.panel-red>.panel-body {
+  color: #fff;
+  background-color: #EF5A5C;
+}
+
+
+
+
+.price.panel-red>.panel-body .lead{
+  text-shadow: 0px 3px 0px rgba(50,50,50, .3);
+}
+
+.price.panel-red .list-group-item {
+  color: #333;
+  background-color: rgba(50,50,50, .01);
+  font-weight:600;
+  text-shadow: 0px 1px 0px rgba(250,250,250, .75);
+}
+
+#chartCheck {
+  color: green;
+}
+
+#chartX {
+  color: red;
+}
