--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
-html *
+/*html *
 {
    font-family: Lato, sans-serif;
-}
+}*/
 
 html {
   position: relative;
@@ -560,7 +560,8 @@ a:hover {
 }
 
 .logoImage {
-  width: inherit;
+  max-width: 150px;
+  max-height: 150px;
   margin-left: auto;
   margin-right: auto;
   padding: 20px 20px 20px 20px;
@@ -568,6 +569,11 @@ a:hover {
 
 .bottomOfPage {
   padding-bottom: 60px;
+}
+
+.verticalAlign {
+    display: flex;
+    align-items: center;
 }
 /**********************************************/
 
@@ -678,21 +684,17 @@ a:hover {
 .container-margin-accountSettings {
   margin-top: 60px;
   margin-left: auto;
-  margin-bottom: 20px;
   width: 60%;
   height: auto;
   border-radius: 4px;
-  background: rgba(250,250,250,1);
   z-index: 1;
 }
 
 .container-margin-accountSettings-continued {
   margin-left: auto;
-  margin-bottom: 20px;
   width: 60%;
   height: auto;
   border-radius: 4px;
-  background: rgba(250,250,250,1);
   z-index: 1;
 }
 
