Added new color scheme to landing page, and modfied styles.css

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 100px;
+  overflow-x: hidden;
 }
 
 /* Begin: Changes made by William Huang 2/7/15 */
