updated Settings layout and refactored settings page code, split the footer into just footer and a scripts.handlebars

--- a/views/partials/receptionist-sidebar.handlebars
+++ b/views/partials/receptionist-sidebar.handlebars
@@ -25,7 +25,7 @@
                 </a>
             </li>
             <li class="treeview">
-                <a href="/customizetheme">
+                <a href="/accountSettings">
                     <i class="fa fa-files-o"></i>
                     <span>Settings</span>
                 </a>
