--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -285,19 +285,8 @@
         </section>
     </div>
 </div>
-<footer class="footer">
-    <div class="container">
-        <ul class="list-inline footer-links text-center">
-            <!--<li><a href="">About Us</a></li>
-            <li><a href="">Store</a></li>
-            <li><a href="">Jobs</a></li>
-            <li><a href="">Privacy</a></li>
-            <li><a href="">Terms</a></li>
-            <li><a href="">Support</a></li>-->
-            <li class="footer-copyright">Copyright &#169; Team Fubar-CSE 112, Winter 2016. All Rights Reserved.</li>
-        </ul>
-    </div>
-</footer>
+
+{{>footer}}
 
     <script>
         $('body').scrollspy({
