--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -24,7 +24,7 @@
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <!--<script src="dist/js/pages/dashboard2.js"></script>-->
 <!-- AdminLTE for demo purposes -->
-<script src="dist/js/demo.js"></script>
+<!--<script src="dist/js/demo.js"></script>-->
 <script>
     eid = "{{eid}}";
 </script>
