removed default template from checkin page, added peter's dashboard, changed css link url to ahave a / infront

--- a/views/business/addemployees.handlebars
+++ b/views/business/addemployees.handlebars
@@ -10,10 +10,10 @@
     {{/if}}
 
     <div class="row">
-        <div class="col-md-6 center-block">
+        <div class="col-md-6">
             <div class="box box-primary">
-                <div class="box-header">
-                    <h3 class="">Add Employee</h3>
+                <div class="box-header with-border">
+                    <h3 class="box-title">Add Employee</h3>
                 </div>
                 <div class="box-body">
                     <form method="post" action="addemployees" enctype="application/x-www-form-urlencoded">
@@ -37,8 +37,8 @@
 
         <div class="col-md-6">
             <div class="box box-success">
-                <div class="box-header">
-                    <h3 class="">Employees - registered</h3>
+                <div class="box-header with-border">
+                    <h3 class="box-title">Employees - registered</h3>
                 </div>
                 <div class="box-body">
                     <table class="table table-striped" id="registeredEmployees">
@@ -63,8 +63,8 @@
 
         <div class="col-md-6">
             <div class="box box-danger">
-                <div class="box-header">
-                    <h3 class="">Employees - not registered</h3>
+                <div class="box-header with-border">
+                    <h3 class="box-title">Employees - not registered</h3>
                 </div>
                 <div class="box-body">
                     <table class="table table-striped" id="notRegisteredEmployees">
