--- a/views/checkin/checkin.handlebars
+++ b/views/checkin/checkin.handlebars
@@ -3,8 +3,7 @@
     <head>
         <title>Welcome</title>
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <link rel='stylesheet' href='/stylesheets/style.css'/>
+        {{>styles}}
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
