--- a/views/business/settings.handlebars
+++ b/views/business/settings.handlebars
@@ -23,6 +23,7 @@
 		</div>
 	</div>
 
+<!-- Row 1 -->
 	<div class="row">
 		<div class="col-md-6">
 			<div class="box box-primary">
@@ -80,6 +81,8 @@
 		</div>
 	</div>
 
+
+ <!-- ROW 2 -->
 	<div class="row">
 		<div class="col-md-6">
 			<div class ="box box-primary col-md-6">
@@ -101,7 +104,7 @@
 						        {{/if}}
 						    </div>
 						    <div class='col-md-6'>
-								
+
 									<div class='form-group'>
 									    <input type="file" name="userLogo" class="text-center" />
 									    <input type="hidden" value="54eca979f2a2d47937757617" name="business" class="text-center"/>
@@ -109,13 +112,82 @@
 							</div>
 						</div>
 					</div>
-					
+
+
 					<div class='box-footer'>
 						    <input class ="btn btn-primary pull-right" type="submit" value="Upload Image" name="Upload Button"/>
 					</div>
 				</form>
+                </div>
 			</div>
-		</div>
+
+            <!-- Change Theme -->
+            <div class="col-md-6">
+    			<div class ="box box-primary col-md-6">
+    			    <div class="box-header with-border">
+    			        <h3 class='box-title'>Upload/Choose a New Theme</h3>
+    			        <p style="color:grey">Upload your own theme to match your office.</p>
+    			    </div>
+    			    <form id="uploadForm" enctype="multipart/form-data" action="/uploadlogo" method="post">
+    				    <div class='box-body text-center' >
+    				    	<div class='row verticalAlign'>
+    					    	<div class='col-md-6'>
+    						        {{#if logo}}
+    						            <h4 class="">Current Theme</h4>
+    						            <div class="">
+    						                <img class="logoImage logoRow" src={{logo}} />
+    						            </div>
+    						        {{else}}
+    						            <h2>There is currently no theme to display for your business</h2>
+    						        {{/if}}
+    						    </div>
+    						    <div class='col-md-6'>
+
+    									<div class='form-group'>
+    									    <input type="file" name="userLogo" class="text-center" />
+    									    <input type="hidden" value="54eca979f2a2d47937757617" name="business" class="text-center"/>
+    									</div>
+    							</div>
+    						</div>
+    					</div>
+
+
+    					<div class='box-footer'>
+    						    <input class ="btn btn-primary pull-right" type="submit" value="Upload Image" name="Upload Button"/>
+    					</div>
+    				</form>
+                    </div>
+    			</div>
+
+<!-- Row 3 -->
+        <!-- Change company info -->
+        <div class="row">
+                    <div class="col-md-6">
+                    <div class="box box-primary">
+                        <div class="box-header with-border" >
+                            <h3 class='box-title'>Company Info</h3>
+                            <p style="color:grey">Configure other parts of your company account.</p>
+                        </div>
+                        <form class="" action="" method="post">
+                            <div class='box-body'>
+                                <div class="form-group">
+                                    <label >Company Name</label>
+                                    <input type="text" id="companyName" name="companyName" class="form-control input-lg" value="{{companyName}}">
+                                </div>
+                                <div class="form-group">
+                                    <label >Phone Number</label>
+                                    <input type="text" id="phone" name ="phone"class="form-control input-lg" value="{{phone}}">
+                                </div>
+                            </div>
+                            <div class="box-footer">
+                                <button type="submit" class="btn btn-primary pull-right">Update</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+    		</div>
+
+    </div>
 	</div>
 </section>
-
