--- a/views/partials/receptionist-sidebar.handlebars
+++ b/views/partials/receptionist-sidebar.handlebars
@@ -15,7 +15,7 @@
         <ul class="sidebar-menu">
             <li class="header">MAIN NAVIGATION</li>
             <li class="treeview">
-                <a href="/dashboard">
+                <a href="/dashboard-admin">
                     <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                 </a>
             </li>
