--- a/views/business/dashboard.handlebars
+++ b/views/business/dashboard.handlebars
@@ -4,7 +4,7 @@
     <h1 class="pull-right" id="currentDate"></h1>
 </section>
 
-<div class="container" style=" box-shadow: 0 9px 0px 0px white, 0 -9px 0px 0px white, 12px 0 15px -4px rgba(31, 73, 125, 0.8), -12px 0 15px -4px rgba(31, 73, 125, 0.8);;">
+<section class="content">
 
 {{#message}}
    <div class="alert alert-danger">{{message}}</div>
@@ -12,7 +12,96 @@
 
     <h1><strong><div>Hi, {{employeeName}} {{employeeID}}</div></strong></h1>
 
+    <div class="col-md-12">
+      <div class="box box-warning box-solid">
+        <div class="box-header with-border" data-widget="collapse">
+        <i class="fa fa-minus" style="display: none"></i>
+          <h3 class="box-title">Quart 3.0</h3> <h3 class="box-title pull-right" style="pull-right">Pending</h3>
+        </div><!-- /.box-header -->
+        <div class="box-body">
+          <table style="width:100%">
+          <colgroup>
+          <col span="2" class="col-md-6">
+        </colgroup>
+            <tr>
+            <td>Company Name: Quart 3.0</td>
+            <td>Address: 2105 Garnet Ave. San Diego, CA 92109</td> 
+          </tr>
+
+          <tr>
+            <td>Owner: Gev Gev</td>
+            <td>Description: Web developer co</td> 
+          </tr>
+          <tr>
+            <td>Contact: 858-270-2086</td>
+            <td>Notes: </td>
+          </tr>
+        </table>
+        </div><!-- /.box-body -->
+      </div><!-- /.box -->
+    </div><!-- /.col -->
+
+    <div class="col-md-12">
+      <div class="box box-danger box-solid">
+        <div class="box-header with-border" data-widget="collapse">
+        <i class="fa fa-minus" style="display: none"></i>
+          <h3 class="box-title">Pint 2.0</h3> <h3 class="box-title pull-right" style="pull-right">Late</h3>
+        </div><!-- /.box-header -->
+        <div class="box-body">
+          <table style="width:100%">
+        <colgroup>
+          <col span="2" class="col-md-6">
+        </colgroup>
+            <tr>
+            <td>Company Name: Pint 2.0</td>
+            <td>Address: 2105 Garnet Ave. San Diego, CA 92109</td> 
+          </tr>
+
+          <tr>
+            <td>Owner: Thomas A. Powell</td>
+            <td>Description: Web dev</td> 
+          </tr>
+          <tr>
+            <td>Contact: 858-270-2086</td>
+            <td>Notes: </td>
+          </tr>
+        </table>
+        </div><!-- /.box-body -->
+      </div><!-- /.box -->
+    </div><!-- /.col -->
+
+    <div class="col-md-12">
+      <div class="box box-success box-solid">
+      <div class="box-header with-border" data-widget="collapse">
+        <i class="fa fa-minus" style="display: none"></i>
+          <h3 class="box-title">Fubar</h3> <h3 class="box-title pull-right" style="pull-right">Paid</h3>
+        </div> <!-- /.box-header -->
+        <div class="box-body">
+          <table style="width:100%">
+        <colgroup>
+          <col span="2" class="col-md-6">
+        </colgroup>
+            <tr>
+            <td>Company Name: Fubar</td>
+            <td>Address: 2105 Garnet Ave. San Diego, CA 92109</td> 
+          </tr>
+
+          <tr>
+            <td>Owner: Gev Gev</td>
+            <td>Description: Web developer co</td> 
+          </tr>
+          <tr>
+            <td>Contact: 858-270-2086</td>
+            <td>Notes: </td>
+          </tr>
+        </table>
+        </div><!-- /.box-body -->
+      </div><!-- /.box -->
+    </div><!-- /.col -->
+
     <!-- Individual Buisnesses have their own panel: wrap using {{for:each}} -->
+
+    <!--
     <div class="panel panel-danger">
     <div class="panel-heading" id="co1">
           <h4><strong>Pint 2.0</strong><span class="pull-right"><strong>Late</strong></h4>
@@ -65,7 +154,8 @@
     </div>
     </div>
 
-     <div class="panel panel-warning">
+
+    <div class="panel panel-warning">
     <div class="panel-heading" id="co3">
           <h4><strong>Quart 3.0</strong><span class="pull-right"><strong>Pending</strong></h4>
     </div>
@@ -89,7 +179,7 @@
           </tr>
         </table>
     </div>
-    </div>
-  </div>
+    </div> -->
 
+  </section>
 </div>
