--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -247,10 +247,13 @@
                     </div>
                 </div>
             </div>
+
             <div class = "container">
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+
+                <div class="col-md-2 col-lg-2">
                 </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+
+                <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
                     <div class="panel price panel-green">
                         <div class="panel-heading arrow_box text-center">
                             <h3>FREE</h3>
@@ -277,7 +280,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
                     <div class="panel price panel-red">
                         <div class="panel-heading  text-center">
                             <h3>PREMIUM</h3>
@@ -305,7 +308,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+
+                <div class="col-md-2 col-lg-2">
                 </div>
             </div>
         </section>
