--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -19,6 +19,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <!-- Web call to Bootstrap-->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+        <!--Analytics-->
+        <script src='/javascripts/analytics.js'></script>
 
     </head>
     <body id="top-page">
@@ -276,7 +278,7 @@
 
                         <!-- Button (Currently no function) -->
                         <div class="panel-footer">
-                            <a class="btn btn-lg btn-block btn-success" href="#">SIGN UP!</a>
+                                <button class="btn btn-lg btn-block btn-success sign2Btn" href="#" onclick="sign2Click()">SIGN UP!</button>
                         </div>
                     </div>
                 </div>
@@ -304,7 +306,7 @@
 
                         <!--Button to purchase (No Function)-->
                         <div class="panel-footer">
-                            <a class="btn btn-lg btn-block btn-danger" href="#">BUY NOW!</a>
+                                <a class="btn btn-lg btn-block btn-danger buyBtn" href="#" onclick="buyClick()">BUY NOW!</a>
                         </div>
                     </div>
                 </div>
@@ -381,5 +383,7 @@
                 offset: 51
             })
         </script>
+
+        {{> googleAnalytics}}
     </body>
 </html>
