--- a/views/business/settings.handlebars
+++ b/views/business/settings.handlebars
@@ -158,6 +158,8 @@
     				</form>
                     </div>
     			</div>
+            </div>
+
 
 <!-- Row 3 -->
         <!-- Change company info -->
