added proper link to Patients in the sidebar

--- a/views/partials/receptionist-sidebar.handlebars
+++ b/views/partials/receptionist-sidebar.handlebars
@@ -20,7 +20,7 @@
                 </a>
             </li>
             <li class="active treeview">
-                <a href="#">
+                <a href="/dashboard">
                     <i class="fa fa-dashboard"></i> <span>Patients</span>
                 </a>
             </li>
