--- a/public/stylesheets/landingStyle.css
+++ b/public/stylesheets/landingStyle.css
@@ -115,13 +115,13 @@ fieldset[disabled] .btn-default.active {
     border-color: #ffffff;
 }
 .btn-default .badge {
-    color: #ffae00;
+    color: #ffffff;
     background-color: #222222;
 }
 .btn-primary {
-    color: #ffae00;
+    color: #ffffff;
     background-color: #071C33;
-    border-color: #071C33;
+    border-color: #ffae00;
     -webkit-transition: all 0.35s;
     -moz-transition: all 0.35s;
     transition: all 0.35s;
@@ -569,4 +569,20 @@ header .header-content .header-content-inner p {
 .btn-danger:hover {
     background-color: #071C33;
     color: #ffffff;
+}
+
+
+/******** Login Page Form ****/
+.form-control{
+    margin: 0 auto;
+    width: 50%;
+    border:3px solid #071C33;
+}
+
+.control-label, .label{
+    font-size: 18px;
+}
+
+.form-control:focus{
+    border-color: #ffae00;
 }
