--- a/public/stylesheets/landingStyle.css
+++ b/public/stylesheets/landingStyle.css
@@ -133,8 +133,8 @@ fieldset[disabled] .btn-default.active {
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
     color: #ffffff;
-    background-color: #071C33;
-    border-color: #071C33;
+    background-color: #ffae00;
+    border-color: #ffae00;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -585,4 +585,50 @@ header .header-content .header-content-inner p {
 
 .form-control:focus{
     border-color: #ffae00;
+}
+/********************* Registration Page **************************/
+.centerForm{
+    margin: 0 auto;
+    color: black;
+}
+
+.centerForm:focus{
+    border-color: #ffae00;
+}
+
+.regis {
+    display: block;
+    margin-bottom: 15px;
+    margin-top: 20px;
+    height: 35px;
+    width: 300px;
+    border:3px solid #071C33;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+.regTitleColor{
+    color: #fff;
+}
+
+.custom-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#regis-container {
+    margin-top: 20px;
+    margin-bottom: 150px;
+}
+
+#form-separator {
+    border-right: 2px solid;
+    border-color: #999999;
+}
+
+#register-image {
+    margin-left: 100px;
+    margin-top: -10px;
+    width:500px;
 }
