--- a/views/business/register.handlebars
+++ b/views/business/register.handlebars
@@ -1,69 +1,69 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>{{ title }}</title>
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css'/>
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-</head>
+    <head>
+        <title>{{ title }}</title>
+        <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <link rel='stylesheet' href='/stylesheets/landingStyle.css'/>
 
-<body>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="/">
-            <img id = "company-logo" src="images/logo.png">
-        </a>
-      </div>
-      <div class="navbar-padding-right">
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <p class="navbar-btn">
-                   <a href="/login" class="btn custom-button" id="login-btn-navbar">Log In</a>
-               </p>
-            </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="container container-margin">
-            <div class="row">
-                <div class="col-xs-offset-1 col-xs-4">
-                    <h2>Create an Account</h2>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    </head>
+
+    <body>
+        <!--Navigation bar-->
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class = "container-fluid">
+                <div class = "navbar-header">
+
+                    <button type = "button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+                        <!--"Screen Readers Only" sr-only-->
+                        <span class = "sr-only">Toggle Navigation</span>
+                        <span class = "icon-bar"></span>
+                        <span class = "icon-bar"></span>
+                        <span class = "icon-bar"></span>
+                    </button>
+                    <!--No Implementation of navbar-brand & page-scroll-->
+                    <a class = "navbar-brand page-scroll" href="/">Enque</a>
+                </div>
+                <!-- No Implementation of page-scroll-->
+                <div class = "collapse navbar-collapse" id="navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right navbar-landing-padding">
+                        <li>
+                            <!--<button type = "button" class = "btn btn-default navbar-btn">Navbar Button</button>-->
+                            <a href="/login" class="page-scroll" style="color: #ffae00;">Log In</a>
+                            <!--<a href="/login" class="btn custom-button page-scroll navbar-btn" id="login-btn-navbar">Log In</a>-->
+                        </li>
+                    </ul>
                 </div>
             </div>
- 
-            <div class="row text-center" id="regis-container">
-                <div class="col-xs-offset-1 col-xs-4" id="form-separator">
-                    <form method="post" action="" enctype="application/x-www-form-urlencoded">
-                        <input class="regis" type="text" name="companyName" value="{{ companyName }}" placeholder="COMPANY NAME" required>
-                        <input class="regis" type="text" name="fname" value="{{ fname }}" placeholder="YOUR FIRST NAME" required>
-                        <input class="regis" type="text" name="lname" value="{{ lname }}" placeholder="YOUR LAST NAME" required>
-                        <input class="regis" type="email" name="email" value="{{ email }}" placeholder="EMAIL" required>
-                        <input class="regis" type="tel" name="phone" value="{{ phone }}" placeholder="PHONE NUMBER" required>
-                        <input class="regis" type="password" name="password" value="{{ password }}" placeholder="PASSWORD" required>
-                        <input class="btn custom-button" name="submit" type="submit" value="Sign Up">
-                    </form>
-                </div>
-                <div class="col-xs-7">
-                    <img class="custom-center" id="register-image" src="images/ipad.png" alt="Register to use iReceptionist"/>
+        </nav>
+
+        <header>
+            <div class="header-content col-xs-4">
+                <h2 class="regTitleColor">Create an Account</h2>
+                <form  method="post" action="" enctype="application/x-www-form-urlencoded">
+                    <input class="regis centerForm" type="text" name="companyName" value="{{ companyName }}" placeholder="COMPANY NAME" required>
+                    <input class="regis centerForm" type="text" name="fname" value="{{ fname }}" placeholder="FIRST NAME" required>
+                    <input class="regis centerForm" type="text" name="lname" value="{{ lname }}" placeholder="LAST NAME" required>
+                    <input class="regis centerForm" type="email" name="email" value="{{ email }}" placeholder="EMAIL" required>
+                    <input class="regis centerForm" type="tel" name="phone" value="{{ phone }}" placeholder="PHONE NUMBER" required>
+                    <input class="regis centerForm" type="password" name="password" value="{{ password }}" placeholder="PASSWORD" required>
+                    <input class="btn btn-primary btn-x2 page-scroll" name="submit" type="submit" value="Sign Up">
+                </form>
+            </div>
+        </header>
+        <footer class = "text-center navbar-fixed-bottom">
+            <div class="footer-below">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            Copyright &copy; Team Fubar, CSE 112 Winter 2016. All Rights Reserved.
+                        </div>
+                    </div>
                 </div>
             </div>
-    </div>
-    <footer class="footer">
-        <div class="container">
-            <ul class="list-inline footer-links text-center">
-                <!--<li><a href="">About Us</a></li>
-                <li><a href="">Store</a></li>
-                <li><a href="">Jobs</a></li>
-                <li><a href="">Privacy</a></li>
-                <li><a href="">Terms</a></li>
-                <li><a href="">Support</a></li>-->
-                <li class = "footer-copyright">Copyright &#169; Gold Team-CSE 112, Winter 2015. All Rights Reserved.</li>
-            </ul>
-        </div>
-    </footer>
-</body>
+        </footer>
+    </body>
 
 </html>
