--- a/views/business/login.handlebars
+++ b/views/business/login.handlebars
@@ -64,6 +64,9 @@
                     </div>
                 </div>
                 </form>
+                {{#if message}}
+                    <div class="alert alert-danger">{{message}}</div>
+                {{/if}}
             </div>
 
         </header>
