split admin and business dashboards

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,9 +22,9 @@
 </head>
 <body class="skin-blue">
 <div class="wrapper">
-    {{>receptionist-header}}
+    {{>header}}
 
-    {{>receptionist-sidebar}}
+    {{>sidebar-business}}
     <div class="content-wrapper">
         {{{body}}}
     </div>
