--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -156,7 +156,7 @@
                         <li class="footer"><a href="#">View all</a></li>
                     </ul>
                 </li>
-                <li><a href="#" class="btn btn-sm btn-info btn-flat pull-right">Logout</a></li>
+                <li><a href="/login" class="btn btn-sm btn-info btn-flat pull-right">Logout</a></li>
             </ul>
         </div>
 
