--- a/views/checkin/checkin.handlebars
+++ b/views/checkin/checkin.handlebars
@@ -1,77 +1,115 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Welcome</title>
+<head>
+    <title>Welcome</title>
 
-        {{>styles}}
-        
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-        <style>
-            body, h1, h2, h3, h4, h5, h6 {
-                color: {{containerText}} !important;
-            }
+    {{>styles}}
 
-            .customBG {
-                /*background-image: url(/images/bg/full/{{bg}});*/
-                background-image: url({{bg}});
-            }
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-            .btn {
-                background-color: {{buttonBg}} !important;
-                border-color: {{buttonBg}} !important;
-                color: {{buttonText}} !important;
-            }
+    <style>
+    body, h1, h2, h3, h4, h5, h6 {
+        /*color: {{containerText}} !important;*/
+    }
 
-            .container-checkin {
-                background-color: {{containerBg}};
-            }
-        </style>
-    </head>
-    <!--<body class = "customBG"> -->
-        <!-- this nav bar is consistent with PK's navbar
-        <header role="banner" class="navbar navbar-fixed-top navbar-custom">
-          <div class="container">
-            <div class="navbar-inverse side-collapse in">
-                <ul class="nav navbar-nav">
-                    <li><a class="navbar-brand" href="#">Company Logo</a></li>
-                </ul>
+    .customBG {
+        /*background-image: url(/images/bg/full/{{bg}});*/
+        /*background-image: url({{bg}});*/
+        background-color: rgb(238, 238, 238);
+    }
+
+    .btn {
+        /*background-color: {{buttonBg}} !important;*/
+        /*border-color: {{buttonBg}} !important;*/
+        /*color: {{buttonText}} !important;*/
+    }
+
+    .container-checkin {
+        background-color: {{containerBg}};
+    }
+    footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 50px;
+        background-color: #071C33;
+    }
+    footer h4 {
+        color: #eeeeee;
+        text-align: center;
+        padding: 0;
+        margin: 0;
+        line-height: 50px;
+        font-weight: bold;
+        text-shadow: 0px 0px 8px #ffae00;
+    }
+    </style>
+
+
+</head>
+
+<body class = "customBG">
+<!-- this nav bar is consistent with PK's navbar
+<header role="banner" class="navbar navbar-fixed-top navbar-custom">
+<div class="container">
+<div class="navbar-inverse side-collapse in">
+<ul class="nav navbar-nav">
+<li><a class="navbar-brand" href="#">Company Logo</a></li>
+</ul>
+</div>
+</div>
+</header> -->
+
+<!-- <div class="container container-checkin"> -->
+
+<h1 class ="header">Welcome to {{companyName}}!</h1>
+
+<img class="checkinphoto" src="{{logo}}" alt="...">
+
+<div class="row">
+    <div class="col-xs-10 col-sm-6 col-md-6 col-lg-4 center-block" style="float:none">
+        <div class="box box-primary">
+            <div class="box-header with-border">
+                <h3 class="box-title">Check In</h3>
             </div>
-          </div>
-        </header> -->
-
-        <div class="container container-checkin">
-            <h1 class ="header">Welcome to {{companyName}}!</h1>
-            <img class="checkinphoto" src="{{logo}}" alt="...">
-
-            <div class="form-group">
-                <label class="col-md-4 control-label inputFirst">First Name</label>
-                <div class="col-md-8">
-                    <input type="firstName" id="inputFirst" name="inputFirst" value="{{ inputFirst }}" class="form-control form-width-custom" required autofocus>
+            <div class="box-body">
+                <div class="form-group">
+                    <label class="control-label inputFirst">First Name</label>
+                    <input type="firstName" id="inputFirst" name="inputFirst" value="{{ inputFirst }}" class="form-control" required autofocus>
+                </div>
+                <div class="form-group">
+                    <label class="control-label inputLast">Last Name</label>
+                    <input type="lastName" id="inputLast" name="inputLast" value="{{ inputLast }}" class="form-control" required autofocus>
+                </div>
+                <div class="form-group">
+                    <label class="control-label inputDOB">Phone Number</label>
+                    <input type="phone" id="inputPhone" name="inputPhone" value="{{ inputDOB }}" class="form-control" placeholder='(xxx) xxx-xxxx' required autofocus>
+                </div>
+                <div class="checkbox">
+                    <label>
+                    <!-- <label class="control-label inputDOB">New Patient?</label> -->
+                    <input type="checkbox" id="new-patient" name="new-patient" value="{{ newPatient }}">
+                    New Patient?
+                </label>
+                </div>
+                <!-- <div class="form-group">
+                    <label class="control-label inputDOB">Phone Number</label>
+                    <input type="phone" id="inputPhone" name="inputPhone" value="{{ inputDOB }}" class="form-control" placeholder='(xxx) xxx-xxxx' required autofocus>
+                </div> -->
+                <div class="box-footer">
+                    <a type="button" class="btn btn-lg btn-primary center-block" href="done">Check In</a>
+                    <!-- <a type="button" class="btn custom checkinbutton" href="done">Check In -->
+                    <!-- </a> -->
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-md-4 control-label inputLast">Last Name</label>
-                <div class="col-md-8">
-                    <input type="lastName" id="inputLast" name="inputLast" value="{{ inputLast }}" class="form-control form-width-custom" required autofocus>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-4 control-label inputDOB">Date of Birth</label>
-                <div class="col-md-8">
-                    <input type="birthDate" id="inputDOB" name="inputDOB" value="{{ inputDOB }}" class="form-control form-width-custom" placeholder='MM/DD/YY' required autofocus>
-                </div>
-            </div> 
-            <div class="form-group">
-                <label class="col-md-4 control-label inputDOB">Phone Number</label>
-                <div class="col-md-8">
-                    <input type="phone" id="inputPhone" name="inputPhone" value="{{ inputDOB }}" class="form-control form-width-custom" placeholder='(xxx) xxx-xxxx' required autofocus>
-                </div>
-            </div> 
         </div>
-        <a type="button" class="btn custom-button checkinbutton" href="done"
-                style="display:block;margin-left:auto;margin-right:auto">Check In
-        </a>
+    </div>
+</div>
 
-    <!-- </body> -->
+<footer>
+    <h4>Powered by ENQUE</h4>
+</footer>
+
+</body>
 </html>
