--- a/views/checkin/done.handlebars
+++ b/views/checkin/done.handlebars
@@ -2,30 +2,50 @@
 <html>
 <head>
     <title>You're Done!</title>
+    {{>styles}}
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
+    <!-- <link rel='stylesheet' href='/stylesheets/style.css'/> -->
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css'/>
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script type="text/javascript">  window.setTimeout("location=('checkin');",7000); </script>
+    <!-- This handles the redirect (7 seconds) -->
+    <script type="text/javascript">  window.setTimeout("location=('checkin');",5000); </script>
+
     <style>
         body, h1, h2, h3, h4, h5, h6 {
-            color: {{containerText}} !important;
+            /*color: {{containerText}} !important;*/
         }
 
         .customBG {
-            background-image: url(/images/bg/full/{{bg}});
+            /*background-image: url(/images/bg/full/{{bg}});*/
+            /*background-image: url({{bg}});*/
+            background-color: rgb(238, 238, 238);
         }
 
         .btn {
-            background-color: {{buttonBg}};
+            /*background-color: {{buttonBg}};
             border-color: {{buttonBg}};
-            color: {{buttonText}}
+            color: {{buttonText}}*/
         }
 
         .container-checkin {
-            background-color: {{containerBg}};
+            /*background-color: {{containerBg}};*/
+        }
+        footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            height: 50px;
+            background-color: #071C33;
+        }
+        footer h4 {
+            color: #eeeeee;
+            text-align: center;
+            padding: 0;
+            margin: 0;
+            line-height: 50px;
+            font-weight: bold;
+            text-shadow: 0px 0px 8px #ffae00;
         }
     </style>
 </head>
@@ -41,10 +61,15 @@
 </nav> -->
 
 <!-- Took out all unnecessary divs to make consistent with checkin page design -->
-<div class="container container-margin container-checkin">
-    <h1 class="header"> Thank you! Someone will be with you shortly. </h1>
-    <img class="checkinphoto" src="{{logo}}" alt="">
+<div class="container">
+    <h1 class="header"> Thank you! <br />We will be with you shortly</h1>
+    <!-- <h1 class="header">Someone will be with you shortly.</h1> -->
+    <img class="checkinphoto" src="{{logo}}" alt="Logo">
 </div>
-<meta http-equiv="refresh" content="5;nocode" />
+<!-- <meta http-equiv="refresh" content="5;nocode" /> -->
 </body>
+
+<footer>
+    <h4>Powered by ENQUE</h4>
+</footer>
 </html>
