--- a/views/partials/receptionist-header.handlebars
+++ b/views/partials/receptionist-header.handlebars
@@ -5,7 +5,8 @@
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <span class="logo-mini"><b>A</b>LT</span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg"><img style="width: 100%; transform: translate(-10px, -18px);" src="images/logo.png"/></span>
+        <!-- <span class="logo-lg"><img style="width: 100%; transform: translate(-10px, -18px);" src="images/logo.png"/></span> -->
+        ENQUE
     </a>
 
     <!-- Header Navbar: style can be found in header.less -->
@@ -18,7 +19,7 @@
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
                 <!-- Messages: style can be found in dropdown.less-->
-                <li class="dropdown messages-menu">
+                <!-- <li class="dropdown messages-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-envelope-o"></i>
                         <span class="label label-success">4</span>
@@ -26,11 +27,12 @@
                     <ul class="dropdown-menu">
                         <li class="header">You have 4 messages</li>
                         <li>
-                            <!-- inner menu: contains the actual data -->
+
                             <div class="slimScrollDiv"
                                  style="position: relative; overflow: hidden; width: auto; height: 200px;">
                                 <ul class="menu" style="overflow: hidden; width: 100%; height: 200px;">
-                                    <li><!-- start message -->
+                                    <li>
+
                                         <a href="#">
                                             <div class="pull-left">
                                                 <img src="dist/img/user2-160x160.jpg" class="img-circle"
@@ -43,7 +45,8 @@
                                             <p>Why not buy a new awesome theme?</p>
                                         </a>
                                     </li>
-                                    <!-- end message -->
+
+
                                     <li>
                                         <a href="#">
                                             <div class="pull-left">
@@ -105,9 +108,10 @@
                         </li>
                         <li class="footer"><a href="#">See All Messages</a></li>
                     </ul>
-                </li>
+                </li> -->
+
                 <!-- Notifications: style can be found in dropdown.less -->
-                <li class="dropdown notifications-menu">
+                <!--<li class="dropdown notifications-menu">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="fa fa-bell-o"></i>
                         <span class="label label-warning">10</span>
@@ -115,7 +119,7 @@
                     <ul class="dropdown-menu">
                         <li class="header">You have 10 notifications</li>
                         <li>
-                            <!-- inner menu: contains the actual data -->
+
                             <div class="slimScrollDiv"
                                  style="position: relative; overflow: hidden; width: auto; height: 200px;">
                                 <ul class="menu" style="overflow: hidden; width: 100%; height: 200px;">
@@ -155,8 +159,9 @@
                         </li>
                         <li class="footer"><a href="#">View all</a></li>
                     </ul>
-                </li>
-                <li><a href="#" class="btn btn-sm btn-info btn-flat pull-right">Logout</a></li>
+                </li>-->
+
+                <li><a href="/" class="btn btn-sm btn-info btn-flat pull-right">Logout</a></li>
             </ul>
         </div>
 
