Fixed dashboard analytics error.

--- a/views/business/dashboard.handlebars
+++ b/views/business/dashboard.handlebars
@@ -190,7 +190,7 @@
       <div id="embed-api-auth-container"></div>
       <p>Total Visits</p>
       <div id="chart-container"></div>
-      <p>Brower Types</p>
+      <p>Browser Types</p>
       <div id="main-chart-container"></div>
 
     <!--Analytics-->
