finished split between admin view and business view

--- a/views/partials/sidebar-business.handlebars
+++ b/views/partials/sidebar-business.handlebars
@@ -33,7 +33,7 @@
                     <span>Settings</span>
                 </a>
             </li>
-            {{if isOwner}}
+            {{#if isOwner}}
             <li class="treeview">
                 <a href="/addemployees">
                     <i class="fa fa-files-o"></i>
