switched order of sidebar tabs, some settings only visible to owner and not employee

--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -228,7 +228,7 @@
 
                         <!-- Button (Currently no function) -->
                         <div class="panel-footer">
-                                <button class="btn btn-lg btn-block btn-success sign2Btn" href="#" onclick="sign2Click()">SIGN UP!</button>
+                                <button class="btn btn-lg btn-block btn-success sign2Btn" href="/register" onclick="sign2Click()">SIGN UP!</button>
                         </div>
                     </div>
                 </div>
