--- a/views/business/settings.handlebars
+++ b/views/business/settings.handlebars
@@ -81,7 +81,7 @@
 		</div>
 	</div>
 
-
+{{#if isAdmin}}
  <!-- ROW 2 -->
 	<div class="row">
 		<div class="col-md-6">
@@ -164,32 +164,33 @@
 <!-- Row 3 -->
         <!-- Change company info -->
         <div class="row">
-                    <div class="col-md-6">
-                    <div class="box box-primary">
-                        <div class="box-header with-border" >
-                            <h3 class='box-title'>Company Info</h3>
-                            <p style="color:grey">Configure other parts of your company account.</p>
-                        </div>
-                        <form class="" action="" method="post">
-                            <div class='box-body'>
-                                <div class="form-group">
-                                    <label >Company Name</label>
-                                    <input type="text" id="companyName" name="companyName" class="form-control input-lg" value="{{companyName}}">
-                                </div>
-                                <div class="form-group">
-                                    <label >Phone Number</label>
-                                    <input type="text" id="phone" name ="phone"class="form-control input-lg" value="{{phone}}">
-                                </div>
-                            </div>
-                            <div class="box-footer">
-                                <button type="submit" class="btn btn-primary pull-right">Update</button>
-                            </div>
-                        </form>
+            <div class="col-md-6">
+                <div class="box box-primary">
+                    <div class="box-header with-border" >
+                        <h3 class='box-title'>Company Info</h3>
+                        <p style="color:grey">Configure other parts of your company account.</p>
                     </div>
+                    <form class="" action="" method="post">
+                        <div class='box-body'>
+                            <div class="form-group">
+                                <label >Company Name</label>
+                                <input type="text" id="companyName" name="companyName" class="form-control input-lg" value="{{companyName}}">
+                            </div>
+                            <div class="form-group">
+                                <label >Phone Number</label>
+                                <input type="text" id="phone" name ="phone"class="form-control input-lg" value="{{phone}}">
+                            </div>
+                        </div>
+                        <div class="box-footer">
+                            <button type="submit" class="btn btn-primary pull-right">Update</button>
+                        </div>
+                    </form>
                 </div>
+            </div>
 
-    		</div>
+    	</div>
 
     </div>
 	</div>
+	{{/if}}
 </section>
