--- a/views/business/register.handlebars
+++ b/views/business/register.handlebars
@@ -27,7 +27,7 @@
                         <span class = "icon-bar"></span>
                     </button>
                     <!--No Implementation of navbar-brand & page-scroll-->
-                    <a class = "navbar-brand page-scroll" href="/">Enque</a>
+                    <a class = "navbar-brand page-scroll" href="/">Enqué</a>
                 </div>
                 <!-- No Implementation of page-scroll-->
                 <div class = "collapse navbar-collapse" id="navbar-collapse-1">
