--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -37,7 +37,7 @@
                        <span class = "icon-bar"></span>
                    </button>
                    <!--No Implementation of navbar-brand & page-scroll-->
-                   <a class = "navbar-brand page-scroll" href="#top-page">Enque</a>
+                   <a class = "navbar-brand page-scroll" href="#top-page">Enqué</a>
                </div>
                <!-- No Implementation of page-scroll-->
                <div class = "collapse navbar-collapse" id="navbar-collapse-1">
