--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -6,7 +6,7 @@
         <span class="logo-mini"><b>A</b>LT</span>
         <!-- logo for regular state and mobile devices -->
         <!-- <span class="logo-lg"><img style="width: 100%; transform: translate(-10px, -18px);" src="images/logo.png"/></span> -->
-        ENQUE
+        ENQUÉ
     </a>
 
     <!-- Header Navbar: style can be found in header.less -->
