Made more visible on mobile, also changed the font format

--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -96,7 +96,7 @@
                         <h4>Sign Up For An Account</h4>
                         <i class="fa fa-pencil-square-o fa-5x" style="color:#ffae00"></i>
                         <br><br>
-                        <p class="overviewColor">
+                        <p class="overviewColor align-overview-mobile">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam volutpat purus in ferment
                             uectetur tortor id, pharetra lorem.
                         </p>
@@ -106,7 +106,7 @@
                         <h4>Customize Your Own Forms </h4>
                         <i class="fa fa-file-text-o fa-5x" style="color:#ffae00"></i>
                         <br><br>
-                        <p class="overviewColor">
+                        <p class="overviewColor align-overview-mobile">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam volutpat purus in ferment
                             uectetur tortor id, pharetra lorem.
                         </p>
@@ -116,7 +116,7 @@
                         <h4>Deploy Onto Device </h4>
                         <i class="fa fa-tablet fa-5x" style="color:#ffae00"></i>
                         <br><br>
-                        <p class="overviewColor">
+                        <p class="overviewColor align-overview-mobile">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam volutpat purus in ferment
                             uectetur tortor id, pharetra lorem.
                         </p>
@@ -126,7 +126,7 @@
                         <h4>Manage Your Customers </h4>
                         <i class="fa fa-users fa-5x" style="color: #ffae00;"></i>
                         <br><br>
-                        <p class="overviewColor">
+                        <p class="overviewColor align-overview-mobile">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam volutpat purus in ferment
                             uectetur tortor id, pharetra lorem.
                         </p>
