--- a/public/stylesheets/landingStyle.css
+++ b/public/stylesheets/landingStyle.css
@@ -2,7 +2,7 @@
 html, body {
     height: 100%;
     width: 100%;
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
 hr {
@@ -350,6 +350,7 @@ header .header-content .header-content-inner h1 {
     margin-top: 0;
     color: #FFF;
     margin-bottom: 0;
+    text-shadow: 2px 2px 0px #000;
 }
 header .header-content .header-content-inner hr {
     margin: 30px auto;
@@ -359,6 +360,7 @@ header .header-content .header-content-inner p {
     color: #FFFFFF;
     font-size: 16px;
     margin-bottom: 50px;
+    text-shadow: 2px 2px 0px #000;
 }
 @media (min-width: 768px) {
     header {
@@ -378,10 +380,14 @@ header .header-content .header-content-inner p {
         margin-right: auto;
     }
     header .header-content .header-content-inner p {
-        font-size: 20px;
+        font-size: 32px;
         max-width: 80%;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    header .header-content .header-content-inner h1 {
+        font-size: 42px;
     }
 }
 
@@ -639,4 +645,32 @@ header .header-content .header-content-inner p {
     margin-left: 100px;
     margin-top: -10px;
     width:500px;
+}
+
+/**** Mobile Only ****/
+@media only screen and (max-device-width: 480px){
+    p{
+        font-size:24px;
+    }
+
+    .align-overview-mobile{
+        text-align: left;
+    }
+
+    h4{
+        text-align: left;
+        font-size: 30px;
+    }
+
+    .btn{
+        font-size: 30px !important;
+    }
+    .btn-x1{
+        padding: 15px 30px !important;
+    }
+
+    .fa-5x {
+        font-size: 7em;
+    }
+
 }
