time not displaying due to variable not being named properly in dashboard.js, added handlebars variables to activate the appropriate sidebar tab

--- a/views/partials/sidebar-admin.handlebars
+++ b/views/partials/sidebar-admin.handlebars
@@ -4,12 +4,12 @@
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu">
             <li class="header">MAIN NAVIGATION</li>
-            <li class="treeview">
+            <li class="{{dashboard}} treeview">
                 <a href="/dashboard">
                     <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                 </a>
             </li>
-            <li class="treeview">
+            <li class="{{settings}} treeview">
                 <a href="/accountSettings">
                     <i class="fa fa-files-o"></i>
                     <span>Settings</span>
