--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -265,18 +265,99 @@
                 </div>
             </div>
         </section>
-        <!--
-        <section id="support" style="background-color: #d3d3d3;">
+
+        <!--Contact Form-->
+        <section>
             <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <h1>Contact Us!</h1>
-                        <h4>Email us at: fubar@fubar.co</h4>
-                        <h4>Call us at: 605-475-6968 </h4>
-                    </div>
-                </div>
+                <form class="form-horizontal" action="" method="post"  id="contact_form">
+                    <fieldset>
+                        <!-- Form Name -->
+                        <legend>Contact Us!</legend>
+
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">First Name</label>
+
+                            <div class="col-md-4 inputGroupContainer">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                    <input name="first_name" placeholder="First Name" class="form-control" type="text">
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <!-- Text input-->
+                        <div class="form-group">
+
+                            <label class="col-md-4 control-label" >Last Name</label>
+
+                            <div class="col-md-4 inputGroupContainer">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                    <input name="last_name" placeholder="Last Name" class="form-control"  type="text">
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <!-- Text input-->
+                        <div class="form-group">
+
+                            <label class="col-md-4 control-label">E-Mail</label>
+
+                            <div class="col-md-4 inputGroupContainer">
+
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                                    <input name="email" placeholder="E-Mail Address" class="form-control"  type="text">
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">Phone #</label>
+
+                            <div class="col-md-4 inputGroupContainer">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                                    <input name="phone" placeholder="(888)123-4567" class="form-control" type="text">
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <!-- Text area -->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">Comments</label>
+                            <div class="col-md-4 inputGroupContainer">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                    <textarea class="form-control" name="comment" placeholder="Comments"></textarea>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Success message -->
+                        <!--
+                        <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you as soon as possible.</div>
+                        -->
+                        <!-- Button -->
+
+                        <div class="form-group">
+                            <label class="col-md-7 control-label"></label>
+                            <div class="col-md-4">
+                                <button type="submit" class="btn btn-warning" >Send <span class="glyphicon glyphicon-send"></span></button>
+                            </div>
+                        </div> 
+
+                    </fieldset>
+                </form>
             </div>
-        </section> -->
+        </section>
+
         <footer class = "text-center" id="support">
             <div class ="footer-above">
                 <div class = "container">
@@ -316,6 +397,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="footer-below">
                 <div class="container">
                     <div class="row">
@@ -333,7 +415,129 @@
                 offset: 51
             })
         </script>
+        <script>
+            $(document).ready(function() {
+                $('#contact_form').bootstrapValidator({
+                            // To use feedback icons, ensure that you use Bootstrap v3.1.0 or later
+                            feedbackIcons: {
+                                valid: 'glyphicon glyphicon-ok',
+                                invalid: 'glyphicon glyphicon-remove',
+                                validating: 'glyphicon glyphicon-refresh'
+                            },
+                            fields: {
+                                first_name: {
+                                    validators: {
+                                        stringLength: {
+                                            min: 2,
+                                        },
+                                        notEmpty: {
+                                            message: 'Please supply your first name'
+                                        }
+                                    }
+                                },
+                                last_name: {
+                                    validators: {
+                                        stringLength: {
+                                            min: 2,
+                                        },
+                                        notEmpty: {
+                                            message: 'Please supply your last name'
+                                        }
+                                    }
+                                },
+                                email: {
+                                    validators: {
+                                        notEmpty: {
+                                            message: 'Please supply your email address'
+                                        },
+                                        emailAddress: {
+                                            message: 'Please supply a valid email address'
+                                        }
+                                    }
+                                },
+                                phone: {
+                                    validators: {
+                                        notEmpty: {
+                                            message: 'Please supply your phone number'
+                                        },
+                                        phone: {
+                                            country: 'US',
+                                            message: 'Please supply a vaild phone number with area code'
+                                        }
+                                    }
+                                },
+                                address: {
+                                    validators: {
+                                        stringLength: {
+                                            min: 8,
+                                        },
+                                        notEmpty: {
+                                            message: 'Please supply your street address'
+                                        }
+                                    }
+                                },
+                                city: {
+                                    validators: {
+                                        stringLength: {
+                                            min: 4,
+                                        },
+                                        notEmpty: {
+                                            message: 'Please supply your city'
+                                        }
+                                    }
+                                },
+                                state: {
+                                    validators: {
+                                        notEmpty: {
+                                            message: 'Please select your state'
+                                        }
+                                    }
+                                },
+                                zip: {
+                                    validators: {
+                                        notEmpty: {
+                                            message: 'Please supply your zip code'
+                                        },
+                                        zipCode: {
+                                            country: 'US',
+                                            message: 'Please supply a vaild zip code'
+                                        }
+                                    }
+                                },
+                                comment: {
+                                    validators: {
+                                        stringLength: {
+                                            min: 10,
+                                            max: 200,
+                                            message:'Please enter at least 10 characters and no more than 200'
+                                        },
+                                        notEmpty: {
+                                            message: 'Please supply a description of your project'
+                                        }
+                                    }
+                                }
+                            }
+                        })
+                        .on('success.form.bv', function(e) {
+                            $('#success_message').slideDown({ opacity: "show" }, "slow") // Do something ...
+                            $('#contact_form').data('bootstrapValidator').resetForm();
 
+                            // Prevent form submission
+                            e.preventDefault();
+
+                            // Get the form instance
+                            var $form = $(e.target);
+
+                            // Get the BootstrapValidator instance
+                            var bv = $form.data('bootstrapValidator');
+
+                            // Use Ajax to submit form data
+                            $.post($form.attr('action'), $form.serialize(), function(result) {
+                                console.log(result);
+                            }, 'json');
+                        });
+            });
+        </script>
         {{> googleAnalytics}}
     </body>
 </html>
