changed css and look of the checkin page

--- a/views/checkin/done.handlebars
+++ b/views/checkin/done.handlebars
@@ -19,7 +19,7 @@
         .customBG {
             /*background-image: url(/images/bg/full/{{bg}});*/
             /*background-image: url({{bg}});*/
-            background-color: rgb(238, 238, 238);
+            background: linear-gradient(to bottom, rgba(242,97,0, 1), rgba(255,151,0, 0.2));
         }
 
         .btn {
@@ -62,9 +62,9 @@
 
 <!-- Took out all unnecessary divs to make consistent with checkin page design -->
 <div class="container">
-    <h1 class="header"> Thank you! <br />We will be with you shortly</h1>
+    <h1 class="header text-center"> <strong>Thank you! <br />We will be with you shortly</strong></h1>
     <!-- <h1 class="header">Someone will be with you shortly.</h1> -->
-    <img class="checkinphoto" src="{{logo}}" alt="Logo">
+    <img class="checkinphoto center-block" src="{{logo}}" alt="Logo">
 </div>
 <!-- <meta http-equiv="refresh" content="5;nocode" /> -->
 </body>
