--- a/views/checkin/checkin.handlebars
+++ b/views/checkin/checkin.handlebars
@@ -16,7 +16,7 @@
     .customBG {
         /*background-image: url(/images/bg/full/{{bg}});*/
         /*background-image: url({{bg}});*/
-        background-color: rgb(238, 238, 238);
+        background: linear-gradient(to bottom, rgba(242,97,0, 1), rgba(255,151,0, 0.2));
     }
 
     .btn {
@@ -29,7 +29,7 @@
         background-color: {{containerBg}};
     }
     footer {
-        position: fixed;
+        position: static;
         bottom: 0;
         width: 100%;
         height: 50px;
@@ -63,12 +63,12 @@
 
 <!-- <div class="container container-checkin"> -->
 
-<h1 class ="header">Welcome to {{companyName}}!</h1>
+<h1 class ="header text-center"><strong>Welcome to {{companyName}}!</strong></h1>
 
-<img class="checkinphoto" src="{{logo}}" alt="...">
+<img class="checkinphoto center-block" src="{{logo}}" alt="...">
 
 <div class="row">
-    <div class="col-xs-10 col-sm-6 col-md-6 col-lg-4 center-block" style="float:none">
+    <div class="col-xs-10 col-sm-6 col-md-6 col-lg-4 center-block" style="float:none; padding: 20px">
         <div class="box box-primary">
             <div class="box-header with-border">
                 <h3 class="box-title">Check In</h3>
