--- a/views/business/landing.handlebars
+++ b/views/business/landing.handlebars
@@ -55,7 +55,7 @@
                        </li>
 
                        <li>
-                           <a class="page-scroll" href="#support">Contact</a>
+                           <a class="page-scroll" href="#contact_us">Contact Us</a>
                        </li>
 
                        <li>
@@ -267,98 +267,79 @@
         </section>
 
         <!--Contact Form-->
-        <section>
+        <section id = "contact_us" style="background-color: #ffae00;">
             <div class="container">
-                <form class="form-horizontal" action="" method="post"  id="contact_form">
-                    <fieldset>
-                        <!-- Form Name -->
-                        <legend>Contact Us!</legend>
+                <div class = "row rowPadding">
+                    <div class="col-lg-12 text-center">
+                        <h1 id="h1Custom">Contact Us!</h1>
+                        <hr id="custom_hr2">
+                    </div>
+                </div>
+            </div>
 
-                        <!-- Text input-->
-                        <div class="form-group">
-                            <label class="col-md-4 control-label">First Name</label>
+            <div class="container">
+                <div class = "row">
+                    <form class="form-horizontal" action="" method="post"  id="contact_form">
+                        <fieldset>
+                            <!-- Text input-->
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">Name</label>
 
-                            <div class="col-md-4 inputGroupContainer">
-                                <div class="input-group">
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                    <input name="first_name" placeholder="First Name" class="form-control" type="text">
+                                <div class="col-md-6 inputGroupContainer">
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                                        <input name="name" placeholder="Name" class="form-control form-color" type="text">
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <!-- Text input-->
+                            <div class="form-group">
+
+                                <label class="col-md-3 control-label">E-Mail</label>
+
+                                <div class="col-md-6 inputGroupContainer">
+
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                                        <input name="email" placeholder="E-Mail Address" class="form-control form-color"  type="text">
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <!-- Text area -->
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">Message</label>
+                                <div class="col-md-6 inputGroupContainer">
+                                    <div class="input-group">
+                                        <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
+                                        <textarea class="form-control form-color" name="message" placeholder="Message"></textarea>
+                                    </div>
                                 </div>
                             </div>
 
-                        </div>
+                            <!-- Success message -->
+                            <!--
+                            <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you as soon as possible.</div>
+                            -->
+                            <!-- Button -->
 
-                        <!-- Text input-->
-                        <div class="form-group">
-
-                            <label class="col-md-4 control-label" >Last Name</label>
-
-                            <div class="col-md-4 inputGroupContainer">
-                                <div class="input-group">
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                    <input name="last_name" placeholder="Last Name" class="form-control"  type="text">
+                            <div class="form-group">
+                                <label class="col-md-8 control-label"></label>
+                                <div class="col-md-4">
+                                    <button type="submit" class="btn btn-warning" >Send <span class="glyphicon glyphicon-send"></span></button>
                                 </div>
                             </div>
 
-                        </div>
-
-                        <!-- Text input-->
-                        <div class="form-group">
-
-                            <label class="col-md-4 control-label">E-Mail</label>
-
-                            <div class="col-md-4 inputGroupContainer">
-
-                                <div class="input-group">
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                                    <input name="email" placeholder="E-Mail Address" class="form-control"  type="text">
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <!-- Text input-->
-                        <div class="form-group">
-                            <label class="col-md-4 control-label">Phone #</label>
-
-                            <div class="col-md-4 inputGroupContainer">
-                                <div class="input-group">
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                                    <input name="phone" placeholder="(888)123-4567" class="form-control" type="text">
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <!-- Text area -->
-                        <div class="form-group">
-                            <label class="col-md-4 control-label">Comments</label>
-                            <div class="col-md-4 inputGroupContainer">
-                                <div class="input-group">
-                                    <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-                                    <textarea class="form-control" name="comment" placeholder="Comments"></textarea>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Success message -->
-                        <!--
-                        <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Thanks for contacting us, we will get back to you as soon as possible.</div>
-                        -->
-                        <!-- Button -->
-
-                        <div class="form-group">
-                            <label class="col-md-7 control-label"></label>
-                            <div class="col-md-4">
-                                <button type="submit" class="btn btn-warning" >Send <span class="glyphicon glyphicon-send"></span></button>
-                            </div>
-                        </div> 
-
-                    </fieldset>
-                </form>
+                        </fieldset>
+                    </form>
+                </div>
             </div>
         </section>
 
-        <footer class = "text-center" id="support">
+        <footer class = "text-center">
             <div class ="footer-above">
                 <div class = "container">
                     <div class = "row">
@@ -414,129 +395,6 @@
                 target: '.navbar-fixed-top',
                 offset: 51
             })
-        </script>
-        <script>
-            $(document).ready(function() {
-                $('#contact_form').bootstrapValidator({
-                            // To use feedback icons, ensure that you use Bootstrap v3.1.0 or later
-                            feedbackIcons: {
-                                valid: 'glyphicon glyphicon-ok',
-                                invalid: 'glyphicon glyphicon-remove',
-                                validating: 'glyphicon glyphicon-refresh'
-                            },
-                            fields: {
-                                first_name: {
-                                    validators: {
-                                        stringLength: {
-                                            min: 2,
-                                        },
-                                        notEmpty: {
-                                            message: 'Please supply your first name'
-                                        }
-                                    }
-                                },
-                                last_name: {
-                                    validators: {
-                                        stringLength: {
-                                            min: 2,
-                                        },
-                                        notEmpty: {
-                                            message: 'Please supply your last name'
-                                        }
-                                    }
-                                },
-                                email: {
-                                    validators: {
-                                        notEmpty: {
-                                            message: 'Please supply your email address'
-                                        },
-                                        emailAddress: {
-                                            message: 'Please supply a valid email address'
-                                        }
-                                    }
-                                },
-                                phone: {
-                                    validators: {
-                                        notEmpty: {
-                                            message: 'Please supply your phone number'
-                                        },
-                                        phone: {
-                                            country: 'US',
-                                            message: 'Please supply a vaild phone number with area code'
-                                        }
-                                    }
-                                },
-                                address: {
-                                    validators: {
-                                        stringLength: {
-                                            min: 8,
-                                        },
-                                        notEmpty: {
-                                            message: 'Please supply your street address'
-                                        }
-                                    }
-                                },
-                                city: {
-                                    validators: {
-                                        stringLength: {
-                                            min: 4,
-                                        },
-                                        notEmpty: {
-                                            message: 'Please supply your city'
-                                        }
-                                    }
-                                },
-                                state: {
-                                    validators: {
-                                        notEmpty: {
-                                            message: 'Please select your state'
-                                        }
-                                    }
-                                },
-                                zip: {
-                                    validators: {
-                                        notEmpty: {
-                                            message: 'Please supply your zip code'
-                                        },
-                                        zipCode: {
-                                            country: 'US',
-                                            message: 'Please supply a vaild zip code'
-                                        }
-                                    }
-                                },
-                                comment: {
-                                    validators: {
-                                        stringLength: {
-                                            min: 10,
-                                            max: 200,
-                                            message:'Please enter at least 10 characters and no more than 200'
-                                        },
-                                        notEmpty: {
-                                            message: 'Please supply a description of your project'
-                                        }
-                                    }
-                                }
-                            }
-                        })
-                        .on('success.form.bv', function(e) {
-                            $('#success_message').slideDown({ opacity: "show" }, "slow") // Do something ...
-                            $('#contact_form').data('bootstrapValidator').resetForm();
-
-                            // Prevent form submission
-                            e.preventDefault();
-
-                            // Get the form instance
-                            var $form = $(e.target);
-
-                            // Get the BootstrapValidator instance
-                            var bv = $form.data('bootstrapValidator');
-
-                            // Use Ajax to submit form data
-                            $.post($form.attr('action'), $form.serialize(), function(result) {
-                                console.log(result);
-                            }, 'json');
-                        });
-            });
         </script>
         {{> googleAnalytics}}
     </body>
