display messages on settings page and allow edit employee name

--- a/views/business/accountsettings.handlebars
+++ b/views/business/accountsettings.handlebars
@@ -5,7 +5,7 @@
 </section>
 
 <section class="content">
-	<div class="box box-primary" style="display:none">
+	<div class="" style="">
 		<div class="box-body">
 			{{#if edited}}
 				<div class="alert alert-success" role="alert">
