imgur for upload logo

--- a/views/business/accountsettings.handlebars
+++ b/views/business/accountsettings.handlebars
@@ -95,12 +95,9 @@
 				    	<div class='row verticalAlign'>
 					    	<div class='col-md-6'>
 						        {{#if logo}}
-						            <h4 class="">Current Logo</h4>
-						            <div class="">
-						                <img class="logoImage logoRow" src={{logo}} />
-						            </div>
+						            <h4 class="">Current Theme</h4>
 						        {{else}}
-						            <h2>There is currently no logo to display for your business</h2>
+						            <h2>There is currently no theme to display for your business</h2>
 						        {{/if}}
 						    </div>
 						    <div class='col-md-6'>
@@ -109,6 +106,11 @@
 									    <input type="file" name="userLogo" class="text-center" />
 									    <input type="hidden" value="54eca979f2a2d47937757617" name="business" class="text-center"/>
 									</div>
+							</div>
+						</div>
+						<div class='row'>
+							<div class='col-md-12'>
+							    <img style='max-width: 100%' class="logoImage logoRow" src={{logo}} />
 							</div>
 						</div>
 					</div>
@@ -134,9 +136,6 @@
     					    	<div class='col-md-6'>
     						        {{#if logo}}
     						            <h4 class="">Current Theme</h4>
-    						            <div class="">
-    						                <img class="logoImage logoRow" src={{logo}} />
-    						            </div>
     						        {{else}}
     						            <h2>There is currently no theme to display for your business</h2>
     						        {{/if}}
@@ -147,6 +146,11 @@
     									    <input type="file" name="userLogo" class="text-center" />
     									    <input type="hidden" value="54eca979f2a2d47937757617" name="business" class="text-center"/>
     									</div>
+    							</div>
+    						</div>
+    						<div class='row'>
+    							<div class='col-md-12'>
+								    <img style='max-width: 100%' class="logoImage logoRow" src={{logo}} />
     							</div>
     						</div>
     					</div>
